--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ title: Valentina Khalil
 #logo: assests/Profile.png
 description: Data & BI Specialist | Tableau Expert | Visualizing Insights 📊✨
 show_downloads: true
-remote_theme: pages-themes/architect@v0.2.0
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-- jekyll-remote-theme
+- jekyll-remote-theme 
